<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="854dp"
    android:layout_height="480dp"
    android:orientation="horizontal"
    tools:context=".activity.ExpertsActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="178dp"
        android:layout_height="42dp"
        android:layout_marginStart="19sp"
        android:layout_marginTop="9dp"
        android:contentDescription="@string/sputnic"
        android:src="@drawable/sputnic_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="monospace"
        android:text="@string/experts"
        android:textColor="#B3000000"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/next"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginEnd="19sp"
        android:clickable="true"
        android:contentDescription="@string/next"
        android:onClick="clickNextButton"
        android:src="@drawable/free_icon_right_arrow_angle_54833"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/prev"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="19sp"
        android:clickable="true"
        android:contentDescription="@string/prev"
        android:onClick="clickPrevButton"
        android:rotationY="180"
        android:src="@drawable/free_icon_right_arrow_angle_54833"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        android:background="#000000"
        android:text="@string/pages"
        android:textColor="#FFFFFF"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView2"
        android:layout_width="632dp"
        android:layout_height="339dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toStartOf="@+id/next"
        app:layout_constraintStart_toEndOf="@+id/prev"
        app:layout_constraintTop_toBottomOf="@+id/textView_title" />

</androidx.constraintlayout.widget.ConstraintLayout>